fix: tower scrollbar

--- a/client/src/features/scene/styles.module.css
+++ b/client/src/features/scene/styles.module.css
@@ -36,7 +36,7 @@
   flex-direction: column;
   justify-content: center;
   margin-bottom: -129px;
-  overflow-y: scroll;
+  overflow: hidden;
 }
 
 .block {
